--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div
                         class="card bg-dark text-white border border-secondary shadow-sm w-100 position-relative overflow-hidden">
                         <img src="./images/course booking api documentation.png" class="card-img-top object-fit-cover"
-                            alt="Course API" style="background-color: white;">
+                            alt="Course API">
                         <div class="overlay d-flex justify-content-center align-items-center">
                             <h5 class="text-white">View Details</h5>
                         </div>
@@ -136,7 +136,7 @@
                     <div
                         class="card bg-dark text-white border border-secondary shadow-sm w-100 position-relative overflow-hidden">
                         <img src="./images/course booking app.svg" class="card-img-top object-fit-cover"
-                            alt="Course App" style="background-color: white;">
+                            alt="Course App">
                         <div class="overlay d-flex justify-content-center align-items-center">
                             <h5 class="text-white">View Details</h5>
                         </div>
@@ -309,7 +309,7 @@
                         <div class="map-container rounded shadow border border-2 border-dark">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.329424771057!2d121.0608408!3d14.5802953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c81492f33951%3A0x40b177c0069702f1!2sUniversity%20of%20Asia%20and%20the%20Pacific%20(UA%26P)!5e0!3m2!1sen!2sph!4v1750168001988!5m2!1sen!2sph"
-                                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                width="100%" height="450" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
