--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>&lt;KIKODES&gt;</title>
 
     <link rel="stylesheet" href="./index.css">
 
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800;900&display=swap"
         rel="stylesheet">
 
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 
 </head>
 
